some bug fix on mobile

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     .main-screen{
         /* text-align: center; */
         background: rgba(73, 62, 57, 0.76);
-        width: 21.7rem;
+        width: 21rem;
         height: 24rem;
         margin-left: 2%;
         margin-top: 7rem;
@@ -56,16 +56,16 @@
         margin-bottom: 12px;
     }
     .bttn{
-        width: 2.7rem;
+        width: 2.6rem;
         height: 2.5rem;
-        margin-left: 2.3rem;
+        margin-left: 2.1rem;
         border: solid black 2px;
         border-radius: 20%;
     }
     .ac{ 
-        width: 2.7rem;
+        width: 2.6rem;
         height: 2.5rem;
-        margin-right: 0.1rem;
+        margin-right: 0.6rem;
         float: right;
         border: solid black 2px;
         border-radius: 20%;
@@ -546,7 +546,7 @@
     height: 10rem;
 } */
 .footer{
-    margin-top: 1rem;
+    margin-top: 2rem;
     background: #222;
     width: 100%;
     height: 10rem;
